--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@ viewBox="0 24 150 28" preserveAspectRatio="none" shape-rendering="auto">
                         <h2 class=" titrebf"> 7 méthodes pour faire échouer un projet avec panache</h2>
                       
                             <p> Vous souhaitez connaître les meilleures astuces pour faire capoter un <strong>GPN</strong> ou une <strong>Strat Op'</strong> ? </p>
-                           <p> Mode d’emploi ci-dessous.</p>
+                           <p> Mode d’emploi ci-dessous !</p>
                             <p><a class="underline--magical" href="https://www.decideurs-magazine.com/strategie/63183-7-methodes-pour-faire-echouer-un-projet-avec-panache.html" target="_blank"> www.decideurs-magazine.com</a></p>
 
 
@@ -346,3 +346,4 @@ applyGradient(gradientAPI, addBackgroundToUnderlines);
   
 	</body>
 </html>
+
