--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+YMANAG<!DOCTYPE html>
 <html lang="fr" class="no-js">
 	<head>
 		<!-- Mobile Specific Meta -->
@@ -16,7 +16,7 @@
         
        <meta name="viewport" content="width=device-width, initial-scale=1">
 		<!-- Site Title -->
-		<title>ErgyManage N1</title>
+		<title>ERGYMANAGE N1</title>
 		<link href="https://fonts.googleapis.com/css?family=Poppins:300,500,600" rel="stylesheet">
        <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
          <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -346,4 +346,5 @@ applyGradient(gradientAPI, addBackgroundToUnderlines);
   
 	</body>
 </html>
+
 
