--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-YMANAG<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="fr" class="no-js">
 	<head>
 		<!-- Mobile Specific Meta -->
@@ -346,5 +346,6 @@ applyGradient(gradientAPI, addBackgroundToUnderlines);
   
 	</body>
 </html>
+
 
 
